hpe/prometheus-metallb.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-kiali-lb
  namespace: istio-system
spec:
  type: LoadBalancer
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: prometheus
  selector:
    app: prometheus
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: grafana
  selector:
    app: grafana
