hpe/kiali-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
#metadata:
#  name: kiali-ingress
#  namespace: istio-system
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    ingress.kubernetes.io/ssl-redirect: "false"
metadata:
  name: kiali-ingress
  namespace: istio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /kiali
        backend:
          serviceName: kiali
          servicePort: 80
